Refactored UI to look better

--- a/src/utils/globals.css
+++ b/src/utils/globals.css
@@ -16,6 +16,13 @@
   }
 }
 
+*:focus{
+    border-radius: 0;
+    outline-color: var(--cyan-600);
+    outline-style: dotted;
+    outline-width: 1px;
+}
+
 ::-webkit-scrollbar {
   width: .8rem;
 }
